--- a/prog2/frontend/includes/cabecalho.html
+++ b/prog2/frontend/includes/cabecalho.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/estilos.css">
+<html lang="pt-br" dir="ltr">
+    <head>
+        <title></title>
+
+        <meta charset="utf-8">
+        <meta name=”viewport” content=”width=device-width,initial-scale=1″>
+
+        <meta name="" content="">
+
+    </head>
