correcoes nas telas 9 e 10

--- a/prog2/frontend/css/reset.css
+++ b/prog2/frontend/css/reset.css
@@ -31,6 +31,10 @@ footer, header, hgroup, main, menu, nav, section {
 	display: block;
 }
 
+body {
+    font-size: 100%;
+}
+
 /*
 =================================================
 ||                      Links                  ||
