--- a/prog2/frontend/css/estilo1.css
+++ b/prog2/frontend/css/estilo1.css
@@ -1,30 +1,8 @@
 /*
-    CSS das telas:
-    1, 6
+    Cabecalho das telas 1 e 6.
+    Contém logo, pesquisa, cadastro-login/perfil-sair.
+    Faz swap entre categorias e barra-categorias.
  */
-
-
-* {
-    text-align: center;
-}
-
-
-.grid-conteiner {
-    display: grid;
-}
-
-
-#tela {
-    width: 100vw;
-    height: 100vh;
-    border: 1px solid yellow;
-    overflow: auto;
-
-    grid-template-rows: 30% auto;
-    grid-row-gap: 3%;
-
-    background: moccasin;
-}
 
 
 #logo {
@@ -37,6 +15,14 @@
 
 #login {
     grid-area: login;
+}
+
+#perfil {
+    grid-area: perfil;
+}
+
+#sair {
+    grid-area: sair;
 }
 
 #pesquisa {
@@ -53,34 +39,17 @@
     grid-area: barra;
 }
 
-header > div {
-    border: 1px solid black;
-    background: lightblue;
-}
-
 
 main {
     grid-auto-rows: auto;
     grid-gap: 3%;
 
-    background: lightgreen;
+    background: lightblue;
 }
 
 /* -------------------------------- */
 
 @media (min-width: 1000px) {
-
-    #tela {
-        width: 100vw;
-        height: 100vh;
-        border: 1px solid yellow;
-        overflow: auto;
-
-        grid-template-rows: 20% auto;
-        grid-row-gap: 3%;
-
-        background: moccasin;
-    }
 
     #categorias {
         display: none;
@@ -92,8 +61,6 @@ main {
 
     main {
         grid-template-columns: auto auto auto auto;
-
-        background: lightgreen;
     }
 
 }
