--- a/prog2/frontend/css/estilo2.css
+++ b/prog2/frontend/css/estilo2.css
@@ -1,29 +1,7 @@
 /*
-    CSS das telas:
-    9
+    Cabecalho com logo, usuarios, produtos, perfil e sair.
+    Não inclui o swap entre categorias e usuarios-produtos;
 */
-
-
-* {
-    text-align: center;
-}
-
-
-.grid-conteiner {
-    display: grid;
-}
-
-
-#tela {
-    width: 100vw;
-    height: 100vh;
-    overflow: auto;
-
-    grid-template-rows: 30% auto;
-    grid-row-gap: 3%;
-
-    background: moccasin;
-}
 
 
 #usuarios, #produtos {
@@ -34,7 +12,7 @@
     grid-area: usuarios;
 }
 
-#usuarios {
+#produtos {
     grid-area: produtos;
 }
 
@@ -55,24 +33,8 @@
     grid-area: sair;
 }
 
-header > div {
-    border: 1px solid;
-    background: purple;
-}
-
 
 @media (min-width: 1000px) {
-
-    #tela {
-        width: 100vw;
-        height: 100vh;
-        overflow: auto;
-
-        grid-template-rows: 20% auto;
-        grid-row-gap: 3%;
-
-        background: moccasin;
-    }
 
     #usuarios, #produtos {
         display: initial;
