--- a/prog2/frontend/css/tela4.css
+++ b/prog2/frontend/css/tela4.css
@@ -1,31 +1,24 @@
 .grid-conteiner{
-  display: grid;
-  border: 1px solid black;
-  margin-top: 50%;
+  width: 100vw;
+  height: 100vh;
+  background: #8B008B;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+}
+.login {
+  width: 300px;
+  height: 300px;
+  background: #ffffff;
 }
 
+@media (min-width: 1000px) {
 
-.login{
-  text-align: center;
-  border: 1px solid black;
-}
-.usuario, .senha{
-  border: 1px solid black;
-  margin: 2%;
-  padding: 2%;
-  display: inline-block;
-}
-img{
-  width: 4%;
-  align:center;
-}
-
-@media (min-width: 300px) {
-
-  .grid-conteiner{
-    display: grid;
-    border: 1px solid black;
-    margin-top: 10%;
+  .login {
+    width: 400px;
+    height: 400px;
+    background: #ffffff;
   }
 
 }
