--- a/prog2/frontend/css/estilo3.css
+++ b/prog2/frontend/css/estilo3.css
@@ -4,18 +4,13 @@
     Inclui div da tabela e botão de adicionar produtos.
 */
 
-#tela {
+/* #tela {
     grid-template-rows: 35% auto;
-}
+} */
 
 
 #pesquisa {
     grid-area: pesquisa;
-}
-
-#categorias {
-    grid-area: categorias;
-    display: none;
 }
 
 header {
@@ -36,22 +31,16 @@ main {
 
 @media (min-width: 1000px) {
 
-    #tela {
+    /* #tela {
         grid-template-rows: 25% auto;
-    }
-
-
-    #categorias {
-        display: initial;
-    }
+    } */
 
     header {
-        grid-template-rows: auto auto auto auto;
+        grid-template-rows: auto auto auto;
         grid-template-columns: auto auto auto auto;
         grid-template-areas: "logo usuarios perfil sair"
                              "logo produtos perfil sair"
-                             "pesquisa pesquisa pesquisa pesquisa"
-                             "categorias categorias categorias categorias";
+                             "pesquisa pesquisa pesquisa pesquisa";
     }
 
 }
