--- a/prog2/frontend/css/estilo6.css
+++ b/prog2/frontend/css/estilo6.css
@@ -1,11 +1,13 @@
 .grid-conteiner {
     display: grid;
+
 }
 main{
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto;
     grid-template-columns: auto;
     grid-template-areas: "imagem nome nome"
                          "imagem preco descricao";
+    margin: 2%;
 }
 
 .imagem {
@@ -16,7 +18,20 @@ main{
 }
 .preco {
     grid-area: preco;
+    margin-top: 50%;
 }
 .descricao {
     grid-area: descricao;
+}
+
+@media (max-width: 1200px) {
+
+  main{
+      grid-template-rows: auto;
+      grid-template-columns: auto;
+      grid-template-areas: "imagem nome nome"
+                           "imagem preco descricao";
+      margin: 2%;
+      height: 30%;
+  }
 }
