--- a/prog2/frontend/css/tela5.css
+++ b/prog2/frontend/css/tela5.css
@@ -7,18 +7,18 @@
   justify-content: center;
   align-items: center
 }
-.login {
+.cadastro {
   width: 300px;
-  height: 300px;
+  height: 400px;
   background: #ffffff;
   border-radius: 2%;
 }
 
 @media (min-width: 1000px) {
 
-  .login {
+  .cadastro {
     width: 400px;
-    height: 400px;
+    height: 500px;
     background: #ffffff;
     border-radius: 2%;
   }
