--- a/prog2/frontend/css/tela4.css
+++ b/prog2/frontend/css/tela4.css
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center
+  align-items: center;
+  text-align: center;
 }
 .login {
   width: 300px;
@@ -13,6 +14,23 @@
   background: #ffffff;
   border-radius: 2%;
 }
+.entrada{
+
+  height: 50%;
+}
+.logo{
+  margin-top: 1%;
+}
+#usuario,#senha{
+  margin: 2%;
+  width: 60%;
+  height: 15%;
+  border: 1px solid gray;
+  font-family: Ubuntu;
+  border-radius: 1px;
+}
+
+
 
 @media (min-width: 1000px) {
 
