--- a/prog2/frontend/css/tela8.css
+++ b/prog2/frontend/css/tela8.css
@@ -10,5 +10,14 @@ header {
         grid-template-areas: "logo pesquisa perfil sair"
                              "barra barra barra barra";
     }
+    #divBusca{
+        background-color: white;
+        border:solid 1px;
+        border-radius:15px;
+        width:500px;
+        display: inline-block;
+        margin-top: 3%;
+
+    }
 
 }
