--- a/prog2/frontend/css/tela1.css
+++ b/prog2/frontend/css/tela1.css
@@ -3,6 +3,15 @@ header {
                          "categorias logo login"
                          "pesquisa pesquisa pesquisa";
 }
+#divBusca{
+    background-color: white;
+    border:solid 1px;
+    border-radius:15px;
+    width:100%;
+    display: inline-block;
+    margin-top: 3%;
+
+}
 
 img{
     margin-top: 6px;
@@ -18,9 +27,9 @@ img{
         background-color: white;
         border:solid 1px;
         border-radius:15px;
-        width:500px;
+        width:400px;
         display: inline-block;
-        margin-top: 3%;
+        margin-top: 4%;
 
     }
 
