--- a/prog2/frontend/css/tela2.css
+++ b/prog2/frontend/css/tela2.css
@@ -1,30 +1,36 @@
 header {
-    grid-template-rows: auto auto auto;
-    grid-template-columns: 20% auto 30%;
     grid-template-areas: "categorias logo cadastro"
                          "categorias logo login"
                          "pesquisa pesquisa pesquisa";
+}
 
-    background: green;
+#divBusca{
+    background-color: white;
+    border:solid 1px;
+    border-radius:15px;
+    width:100%;
+    display: inline-block;
+    margin-top: 3%;
+
+}
+
+img{
+    margin-top: 6px;
 }
 
 @media (min-width: 1000px) {
 
     header {
-        grid-template-rows: 60% auto;
-        grid-template-columns: 25% 45% auto auto;
         grid-template-areas: "logo pesquisa cadastro login"
                              "barra barra barra barra";
-
-        background: green;
     }
     #divBusca{
         background-color: white;
         border:solid 1px;
         border-radius:15px;
-        width:500px;
+        width:400px;
         display: inline-block;
-        margin-top: 3%;
+        margin-top: 4%;
 
     }
 
