--- a/prog2/frontend/css/tela7.css
+++ b/prog2/frontend/css/tela7.css
@@ -7,7 +7,19 @@ header {
 
     background: green;
 }
+#divBusca{
+    background-color: white;
+    border:solid 1px;
+    border-radius:15px;
+    width:100%;
+    display: inline-block;
+    margin-top: 3%;
 
+}
+
+img{
+    margin-top: 6px;
+}
 
 @media (min-width: 1000px) {
 
@@ -23,9 +35,9 @@ header {
         background-color: white;
         border:solid 1px;
         border-radius:15px;
-        width:500px;
+        width:400px;
         display: inline-block;
-        margin-top: 3%;
+        margin-top: 4%;
 
     }
 
