--- a/prog2/frontend/css/tela11.css
+++ b/prog2/frontend/css/tela11.css
@@ -14,6 +14,10 @@ th, td {
 #tabela-desktop {
     display: none;
 }
+#logo > img{
+  width: 100%;
+  height: 100%;
+}
 
 
 @media (min-width: 1000px) {
