--- a/prog2/frontend/css/tela14.css
+++ b/prog2/frontend/css/tela14.css
@@ -11,6 +11,10 @@ th, td {
     padding: 1vmin 0;
     border: 1px solid;
 }
+#logo > img{
+  width: 100%;
+  height: 100%;
+}
 
 @media (min-width: 1000px) {
 
