--- a/prog2/frontend/css/estilo0.css
+++ b/prog2/frontend/css/estilo0.css
@@ -14,7 +14,8 @@
 #tela {
     width: 100vw;
     height: 100vh;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     grid-template-rows: 30% auto;
 
     grid-row-gap: 3%;
