--- a/prog2/frontend/css/tela1.css
+++ b/prog2/frontend/css/tela1.css
@@ -7,19 +7,25 @@ header {
     background-color: white;
     border:solid 1px;
     border-radius:15px;
-    width:100%;
+    width:50vw;
     display: inline-block;
-    margin-top: 3%;
+    margin-top: 10px;
 
 }
+#categorias > img {
+    max-width: 17vw;
+    max-height: 20vh;
+}
 
-img{
-    margin-top: 6px;
+#divBusca > img{
+    margin-top: 7px;
 }
-#logo > img{
-  width: 100%;
-  height: 100%;
+
+#logo > img {
+    max-width: 47vw;
+    max-height: 20vh;
 }
+
 
 @media (min-width: 1000px) {
 
@@ -31,10 +37,16 @@ img{
         background-color: white;
         border:solid 1px;
         border-radius:15px;
-        width:400px;
+        width:30vw;
+        height: 5vh;
         display: inline-block;
-        margin-top: 4%;
+        margin-top: 19px;
 
     }
+    #logo > img {
+        max-width: 22vw;
+        max-height: 13.2vh;
+    }
+
 
 }
