--- a/prog2/frontend/css/tela6.css
+++ b/prog2/frontend/css/tela6.css
@@ -3,23 +3,27 @@ header {
                          "categorias logo sair"
                          "pesquisa pesquisa pesquisa";
 }
-
 #divBusca{
     background-color: white;
     border:solid 1px;
     border-radius:15px;
-    width:100%;
+    width:50vw;
     display: inline-block;
-    margin-top: 3%;
+    margin-top: 10px;
 
 }
-
-img{
-    margin-top: 6px;
+#categorias > img {
+    max-width: 17vw;
+    max-height: 20vh;
 }
-#logo > img{
-  width: 100%;
-  height: 100%;
+
+#divBusca > img{
+    margin-top: 7px;
+}
+
+#logo > img {
+    max-width: 47vw;
+    max-height: 20vh;
 }
 
 @media (min-width: 1000px) {
@@ -32,10 +36,15 @@ img{
         background-color: white;
         border:solid 1px;
         border-radius:15px;
-        width:400px;
+        width:30vw;
+        height: 5vh;
         display: inline-block;
-        margin-top: 4%;
+        margin-top: 19px;
 
+    }
+    #logo > img {
+        max-width: 22vw;
+        max-height: 13.2vh;
     }
 
 }
