--- a/prog2/frontend/css/estilo4.css
+++ b/prog2/frontend/css/estilo4.css
@@ -6,14 +6,14 @@
 
 
 header {
-    grid-template-rows: auto auto;
+    grid-template-rows: 50% 50%;
     grid-template-columns: 20% auto 30%;
     grid-template-areas: "opcoes logo perfil"
                          "opcoes logo sair";
 }
 
 #opcoes > img {
-    max-width: 17vw;
+    max-width: 13vw;
     max-height: 27vh;
 }
 
@@ -22,17 +22,27 @@ header {
     max-height: 27vh;
 }
 
+#perfil > img {
+    max-width: 22vw;
+    max-height: 22vh;
+}
+
 
 @media (min-width: 1000px) {
 
     header {
-        grid-template-rows: auto auto;
-        grid-template-columns: auto auto auto auto;
+        grid-template-rows: 50% 50%;
+        grid-template-columns: 25% 25% auto 25%;
         grid-template-areas: "logo usuarios perfil sair"
                              "logo produtos perfil sair";
     }
 
     #logo > img {
+        max-width: 23vw;
+        max-height: 18vh;
+    }
+
+    #perfil > img {
         max-width: 22vw;
         max-height: 17vh;
     }
