mudanças no estilo tela1 e tela6

--- a/prog2/frontend/css/estilo7.css
+++ b/prog2/frontend/css/estilo7.css
@@ -8,7 +8,7 @@ Estilo comum as telas 1,2,3,6,7,8,10 e 11
     border-radius:15px;
     width:300px;
     display: inline-block;
-    height: 40%;
+    height: 5vh;
 
 }
 
