--- a/prog2/frontend/css/estilo2.css
+++ b/prog2/frontend/css/estilo2.css
@@ -1,6 +1,5 @@
 /*
     Define grid-area dos elementos logo, usuarios, produtos, perfil e sair (do cabeçalho).
-    Contém estilos para os botões do cabeçalho.
     Swap de display entre opcoes e usuarios-produtos.
     Regras gerais para <div>s do header também.
 */
@@ -10,9 +9,14 @@ img, input[type="image"] {
 }
 
 header > div, main > div {
-    border: 1px solid;
+    border: 1px solid blue;
 }
 
+
+#sair > button {
+    background-color: #BC5090;
+    color: white;
+}
 
 
 header > div {
