--- a/prog2/frontend/css/estilo1.css
+++ b/prog2/frontend/css/estilo1.css
@@ -7,7 +7,6 @@
 
 #logo {
     grid-area: logo;
-
 }
 
 #cadastro {
@@ -20,7 +19,6 @@
 
 #perfil {
     grid-area: perfil;
-
 }
 
 #sair {
@@ -39,9 +37,6 @@
 #barra-categorias {
     display: none;
     grid-area: barra;
-    background-color: #58508D;
-    margin-top: 10px;
-    border-radius: 10px;
 }
 
 header {
@@ -53,23 +48,8 @@ header {
 main {
     grid-auto-rows: auto;
     grid-gap: 3%;
-    margin: 7px;
 
-}
-main > div{
-    border: 1px solid black;
-}
-#barra-categorias > nav{
-    margin: 10px;
-}
-#barra-categorias > nav > a{
-    font-size: 20px;
-    font-family: Ubuntu;
-    color: #fff;
-    width: 30vw;
-    margin: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
+    background: lightblue;
 }
 
 /* -------------------------------- */
