--- a/prog2/frontend/css/estilo3.css
+++ b/prog2/frontend/css/estilo3.css
@@ -35,7 +35,6 @@
     padding: 0 3%;
 
     border: 1vmin solid gray;
-    /* border-radius: 3%; */
 }
 
 header {
@@ -63,9 +62,33 @@ header {
 
 
 main {
-    grid-template-rows: 90% 10%;
+    grid-template-rows: auto 10%;
     grid-template-columns: 100%;
-    grid-gap: 5%;
+    grid-gap: 2.5%;
+}
+
+#tabela {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+
+    /* overflow-y: auto; */
+}
+
+#novo-produto {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+
+    display: grid;
+
+    justify-content: center;
+    align-items: center;
+}
+
+#novo-produto > button {
+    background-color: #41c936;
+    color: white;
+
+    padding: 1vh 20vw;
 }
 
 
@@ -93,6 +116,14 @@ main {
     #perfil > img {
         max-width: 22vw;
         max-height: 13.2vh;
+    }
+
+
+    #novo-produto > button {
+        background-color: #41c936;
+        color: white;
+
+        padding: 1.5vh 30vw;
     }
 
 }
