--- a/prog2/frontend/css/estilo5.css
+++ b/prog2/frontend/css/estilo5.css
@@ -81,7 +81,7 @@ label {
 
 
 main {
-    grid-template-rows: 10% auto 10%;
+    grid-template-rows: 10% 90% 10%;
     grid-template-columns: 100%;
 
     grid-template-areas: "titulo"
@@ -102,7 +102,10 @@ main {
     }
 
     #formulario {
-        grid-template-rows: auto auto auto auto auto auto auto;
+        /* grid-template-rows: auto auto auto auto auto auto auto; */
+        grid-template-rows: calc(100% / 7) calc(100% / 7) calc(100% / 7)
+                            calc(100% / 7) calc(100% / 7) calc(100% / 7)
+                            calc(100% / 7);
         grid-template-columns: 15% auto 15% auto;
 
         grid-template-areas: "l-codigo i-codigo . img"
