--- a/prog2/frontend/css/tela11.css
+++ b/prog2/frontend/css/tela11.css
@@ -2,13 +2,39 @@ table {
     border-collapse: collapse;
 }
 
-th, td {
-    padding: 1vmin 1vmin;
-    border-bottom: 1px solid;
+tbody {
+    border: 1px solid;
 }
+
+th, td {
+    padding: 1vh 2vw;
+}
+
+th {
+    background-color: #58508D;
+    color: white;
+}
+
+td {
+    vertical-align: middle;
+    border-bottom: 1px solid black;
+}
+
+tr:last-child > td {
+    border: 0;
+}
+
+
+td img {
+    max-width: 30px;
+    max-height: 30px;
+}
+
 
 #tabela-mobile {
     display: initial;
+
+
 }
 
 #tabela-desktop {
