--- a/prog2/frontend/css/reset.css
+++ b/prog2/frontend/css/reset.css
@@ -63,6 +63,16 @@ li {
 
 /*
 =================================================
+||              Cabeçalhos                     ||
+=================================================
+*/
+
+h1, h2, h3, h4, h5, h6 {
+    font: inherit;
+}
+
+/*
+=================================================
 ||                   Formulários               ||
 =================================================
 */
