--- a/prog2/frontend/css/tela5.css
+++ b/prog2/frontend/css/tela5.css
@@ -14,6 +14,31 @@
   border-radius: 2%;
 }
 
+
+.entrada{
+  height: 50%;
+  text-align: center;
+}
+.logo{
+  margin-top: 1%;
+}
+img{
+  width:300px;
+  height:150px;
+}
+#usuario,#senha,#email,#confirmasenha{
+  margin-top: 20px;
+  width: 60%;
+  height: 15%;
+  border: 1px solid gray;
+  font-family: Ubuntu;
+  border-radius: 1px;
+}
+#usuario:hover,#senha:hover,#email:hover,#confirmasenha:hover{
+  background-color: #e0bcdd;
+
+}
+
 @media (min-width: 1000px) {
 
   .cadastro {
@@ -21,6 +46,10 @@
     height: 500px;
     background: #ffffff;
     border-radius: 2%;
+  }
+  img{
+    width:400px;
+    height:200px;
   }
 
 }
