button convertidos para links

--- a/prog2/frontend/css/estilo2.css
+++ b/prog2/frontend/css/estilo2.css
@@ -5,7 +5,7 @@
 */
 
 
-#sair > button {
+#sair > a {
     background-color: #BC5090;
     color: white;
 }
@@ -23,6 +23,7 @@ header > div {
 
 #opcoes {
     grid-area: opcoes;
+
     display: grid;
 }
 
