--- a/prog2/frontend/css/tela9.css
+++ b/prog2/frontend/css/tela9.css
@@ -1,9 +1,9 @@
-#usuarios > button {
+#usuarios > a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
 
-#produtos > button {
+#produtos > a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
