--- a/prog2/frontend/css/tela14.css
+++ b/prog2/frontend/css/tela14.css
@@ -1,9 +1,9 @@
-#usuarios > button {
+#usuarios > a {
     background-color: #FF6361;
     color: white;
 }
 
-#produtos > button {
+#produtos > a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
