--- a/prog2/frontend/css/estilo2.css
+++ b/prog2/frontend/css/estilo2.css
@@ -1,30 +1,16 @@
 /*
-    Define grid-area dos elementos logo, usuarios, produtos, perfil e sair (do cabeçalho).
+    Grid-template do header dos elementos.
+    Define grid-area dos elementos logo, usuarios, produtos, perfil, sair e pesquisa.
+    O display da pesquisa aparece em outros arquivos.
     Swap de display entre opcoes e usuarios-produtos.
     Regras gerais para <div>s do header também.
 */
 
 
-#sair > a {
-    background-color: #BC5090;
-    color: white;
-}
-
-
-header > div {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-
-#usuarios, #produtos {
-    display: none;
-}
-
 #opcoes {
-    grid-area: opcoes;
-
     display: grid;
+
+    grid-area: opcoes;
 }
 
 #usuarios {
@@ -48,8 +34,105 @@ header > div {
     grid-area: sair;
 }
 
+#pesquisa {
+    grid-area: pesquisa;
+}
+
+
+header {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 20% auto 30%;
+    grid-template-areas: "opcoes logo perfil"
+                         "opcoes logo sair"
+                         "pesquisa pesquisa pesquisa";
+}
+
+header > div {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#pesquisa input {
+    text-align: left;
+
+    width: 98vw;
+    height: 90%;
+
+    padding: 0 3%;
+
+    border: 1vmin solid gray;
+}
+
+
+#usuarios a {
+    padding: 0.8vh 5.23vw;
+}
+
+#produtos a {
+    padding: 0.8vh 4.9vw;
+}
+
+#sair a {
+    padding: 1.5vh 5.5vw;
+
+    background-color: #BC5090;
+    color: white;
+}
+
+
+#opcoes img {
+    max-width: 13vw;
+    max-height: 27vh;
+}
+
+#logo img {
+    max-width: 47vw;
+    max-height: 20vh;
+}
+
+#perfil img {
+    max-width: 27vw;
+    max-height: 20vh;
+}
+
+
+#usuarios, #produtos {
+    display: none;
+}
+
+
+
 
 @media (min-width: 1000px) {
+
+    header {
+        grid-template-rows: auto auto auto;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-areas: "logo usuarios perfil sair"
+                             "logo produtos perfil sair"
+                             "pesquisa pesquisa pesquisa pesquisa";
+    }
+
+
+    #pesquisa input {
+        padding: 0.9% 2%;
+
+        border: 0.5vmin solid gray;
+    }
+
+
+    #logo img {
+        max-width: 22vw;
+        max-height: 13.2vh;
+    }
+
+    #perfil img {
+        max-width: 22vw;
+        max-height: 13.2vh;
+    }
+
 
     #usuarios, #produtos {
         display: grid;
