--- a/prog2/frontend/css/estilo8.css
+++ b/prog2/frontend/css/estilo8.css
@@ -4,12 +4,12 @@
     [ PRODUTOS ] = "ativado"
 */
 
-#usuarios > a {
+#usuarios a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
 
-#produtos > a {
+#produtos a {
     background-color: #FF6361;
     color: white;
 }
