--- a/prog2/frontend/css/tela9.css
+++ b/prog2/frontend/css/tela9.css
@@ -1,9 +1,9 @@
-#usuarios > a {
+#usuarios a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
 
-#produtos > a {
+#produtos a {
     background-color: #FFADAD;
     color: #4D4D4D;
 }
