--- a/prog2/frontend/css/tela14.css
+++ b/prog2/frontend/css/tela14.css
@@ -16,7 +16,10 @@ main {
 
 table {
     width: 100%;
+
     border-collapse: collapse;
+
+    font-size: 0.8em;
 }
 
 tbody {
@@ -48,6 +51,10 @@ td img {
 }
 
 @media (min-width: 1000px) {
+
+    table {
+        font-size: 1em;
+    }
 
     main {
         grid-template-columns: 90%;
