--- a/prog2/frontend/css/estilo1.css
+++ b/prog2/frontend/css/estilo1.css
@@ -48,6 +48,7 @@
 #categorias {
     display: initial;
     grid-area: categorias;
+
 }
 
 #barra-categorias {
@@ -56,6 +57,7 @@
     background-color: #58508D;
     margin-top: 15px;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
 header {
@@ -74,18 +76,11 @@ main {
 main > div{
     border: 1px solid black;
 }
+
 #barra-categorias > nav{
     margin: 10px;
 }
-#barra-categorias > nav > a{
-    font-size: 20px;
-    font-family: Ubuntu;
-    color: #fff;
-    width: 30vw;
-    margin: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
+
 #cadastro > a > img{
     width: 50px;
     height: 50px;
@@ -109,7 +104,7 @@ main > div{
     width: 60px;
     height: 68px;
 
-    
+
 }
 
 /* -------------------------------- */
@@ -122,7 +117,19 @@ main > div{
 
     #barra-categorias {
         display: initial;
+
     }
+    #barra-categorias > nav > a{
+        font-size: 20px;
+        font-family: Ubuntu;
+        color: #fff;
+        max-width: 100vw;
+        margin: 9px;
+        padding-left: 10px;
+        padding-right: 20px;
+
+    }
+
 
     header {
         grid-template-rows: 60% auto;
